# Solyrix-AstraLink

./: .gitignore  LICENSE  README.md  architecture_diagrams.md.resolved  sitemap.xml
.github/workflows/: ci.yml
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: compliance.rs  types.rs
contracts/identity-sbt/: Cargo.toml
contracts/identity-sbt/src/: lib.rs
contracts/rwa-token/: Cargo.toml
contracts/rwa-token/src/: compliance.rs  errors.rs  events.rs  governance.rs  lib.rs  storage.rs  test.rs  types.rs
frontend/: .env.local.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/verify-aadhaar/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/admin/: page.tsx
frontend/app/dashboard/compliance/: page.tsx
frontend/app/dashboard/governance/: page.tsx
frontend/app/dashboard/history/: page.tsx
frontend/app/dashboard/transfer/: page.tsx
frontend/components/: WalletButton.tsx  sparkles-fullpage-demo.tsx  webcam-pixel-grid-demo.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Toast.tsx  encrypted-text.tsx  sparkles.tsx  webcam-pixel-grid.tsx
frontend/lib/: contract.ts  store.ts
frontend/lib/hooks/: useBalance.ts  useContractEvents.ts  useIsGovernor.ts  useKycStatus.ts  usePendingYield.ts  useProposals.ts  useTokenMetadata.ts  useTokenStats.ts
