[package]
name = "astralink-rwa-token"
version = "1.0.0"
authors = ["AstraLink Team"]
description = "Stellar RWA Token Factory"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "=25.3.1"  # Use the latest stable version

[dev-dependencies]
soroban-sdk = { version = "=25.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true
